# pattern-to-text

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
results/pytest/: report.html
src/: pattern_to_text.py
tests/: test_pattern_to_text.py
